Improved filter class instantiation and logging when searching for filters.